--- a/index.html
+++ b/index.html
@@ -8,21 +8,29 @@
     <link rel="stylesheet" href="style.css">
     <title>Your Name</title>
 </head>
+    
 <body>
     <div class="grid-2">
         <div class="section-1">
             <i class="fas fa-code fa-5x white"></i>
-            <h2>FirstName LastName</h2>
-            <p>City,Country.</p>
+            <h2>Amartya Dash</h2>
+            <p>Bengaluru, India.</p>
             <a href="#"><i class="fab fa-twitter"></i></a>
             <a href="#"><i class="fab fa-linkedin"></i></a>
             <a href="#"><i class="fab fa-github"></i></a>
         </div>
         <div class="section-2">
             <h2>About</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quas sint et nihil iusto eius nostrum sit error, repellat optio quisquam! Magnam dolore iusto cumque. Nostrum error iste neque maiores.</p>
+            <p>Interested in Data Science, Robotics, Image Processing and Anime. Y18, IIT Kanpur (Hall-5).</p>
             <h2>Experience</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis in maiores autem quidem.</p>
+            <h3>Junior Analyst</h3>
+            <h4>HSBC</h4>
+            <p>- Received a Pre-Placement Offer based on my performance in this internship
+- Designed a Production Credit (PC) calculation framework to better represent the value of client flow in FX option trades.
+- Replaces the current method of awarding a fixed percentage of the spread as PC to sales with a model that gives a PC value based on the P&L profile of the client and liquidity of the currency pair.
+- Worked closely with a team of FX options quant traders and e-trading quants to develop a novel half-life exponential decay model that captures PC for any aggregate P&L profile
+- Successfully demonstrated the model’s results with different tier combinations for the vast majority of the trade data
+- Refactored the codebase for integration into the company’s analytics chatbot, Sympricot</p>
 
             <h2>Skills</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis in maiores autem quidem obcaecati excepturi! Cupiditate eaque itaque magni voluptatibus neque nobis est dolor? Atque sunt minus ipsa asperiores. At.</p>
