Removed scss and other node stuff

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div id="lead">
         <div id="lead-content">
             <h1>Amartya Dash</h1>
-            <h2>Data Science & Finance</h2>
+            <h2>Data Science & Finance <br> <img src="images/hsbc.png" alt="logo" width="60" height="30"/> | <img src="images/aerial.png" alt="logo" width="45" height="45"/></h2>
             <a href="https://drive.google.com/file/d/1c8tm0b23gm8dXc9TzIW_S_zp68g6ZP9J/view?usp=sharing" target="_blank" class="btn-rounded-white">View Resume</a>
         </div>
         <!-- End #lead-content -->
