--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@ Secured the 1st Position and the Gold Medal, with a perfect score of 400/400
     <div id="contact">
         <h2>Get in Touch</h2>
         <div id="contact-form">
-            <form method="POST" action="https://formspree.io/work.amartyadash@gmail.com">
+            <form method="POST" action="https://formspree.io/f/mnqwrpoa">
                 <input type="hidden" name="_subject" value="Contact request from personal website" />
                 <input type="email" name="_replyto" placeholder="Your email" required>
                 <textarea name="message" placeholder="Your message" required></textarea>
